# club_tracker

./: CMakeLists.txt  README.md  bad.txt
include/: client.hpp  club.hpp  event.hpp  parser.hpp  table.hpp  time_utils.hpp
src/: club.cpp  main.cpp  parser.cpp  time_utils.cpp
tests/: club.cpp  parse.cpp  time_utils.cpp
